--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="A DEMONSTRATION OF WHAT CAN BE ACCOMPLISHED THROUGH CSS-BASED DESIGN. SELECT ANY STYLE SHEET FROM THE LIST TO LOAD IT INTO THIS PAGE.">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900" rel="stylesheet">
         <link rel="stylesheet" href="assets/css/style.css">
+        <script type="text/javascript" src="assets/js/app.js"></script>
     </head>
     <body id="body">
             <!-- main wrapper -->
@@ -94,21 +95,21 @@
                     <!-- Requirements -->
                     <div id="requirement">
                         <h2>Requirements</h2>
-                        <p>Where possible, we would like to see mostly <span>CSS 1 &amp; 2 </span>usage. <span>CSS 3 &amp; 4</span> should be limited to widely-supported elements only, or strong fallbacks should be provided. The CSS Zen Garden is about functional, practical CSS and not the latest bleeding-edge tricks viewable by 2% of the browsing public. The only real requirement we have is that your <span>CSS</span> validates.</p>
+                        <p>Where possible, we would like to see mostly <span>CSS 1 &amp; 2 </span>usage. <span>CSS 3 &amp;amp; 4</span> should be limited to widely-supported elements only, or strong fallbacks should be provided. The CSS Zen Garden is about functional, practical CSS and not the latest bleeding-edge tricks viewable by 2% of the browsing public. The only real requirement we have is that your <span>CSS</span> validates.</p>
                         <p>Luckily, designing this way shows how well various browsers have implemented <span>CSS</span> by now. When sticking to the guidelines you should see fairly consistent results across most modern browsers. Due to the sheer number of user agents on the web these days — especially when you factor in mobile — pixel-perfect layouts may not be possible across every platform. That’s okay, but do test in as many as you can. Your design should work in at least IE9+ and the latest Chrome, Firefox, iOS and Android browsers (run by over 90% of the population).</p>
                         <p>We ask that you submit original artwork. Please respect copyright laws. Please keep objectionable material to a minimum, and try to incorporate unique and interesting visual themes to your work. We’re well past the point of needing another garden-related design.</p>
-                        <p>This is a learning exercise as well as a demonstration. You retain full copyright on your graphics (with limited exceptions, see <a href="#">submission guidelines</a>), but we ask you release your <span>CSS</span> under a Creative Commons license identical to the <a href="">one on this site</a> so that others may learn from your work.</p>
+                        <p>This is a learning exercise as well as a demonstration. You retain full copyright on your graphics (with limited exceptions, see <a href="#">submission guidelines</a>), but we ask you release your <span>CSS</span> under a Creative Commons license identical to the <a href="#">one on this site</a> so that others may learn from your work.</p>
                         <hr>
-                        <p>BY <a href="#">DAVE SHEA</a>. BANDWIDTH GRACIOUSLY DONATED BY <a href="">MEDIATEMPLE</a>. NOW AVAILABLE: <a href="#">ZEN GARDEN, THE BOOK</a>.</p>
+                        <p>BY <a href="#">DAVE SHEA</a>. BANDWIDTH GRACIOUSLY DONATED BY <a href="#">MEDIATEMPLE</a>. NOW AVAILABLE: <a href="#">ZEN GARDEN, THE BOOK</a>.</p>
                     </div>
 
                     <!-- footer -->
-                    <footer id="footer">
-                        <a href="#footer">HTML</a>
-                        <a href="#footer">CSS</a>
-                        <a href="#footer">CC</a>
-                        <a href="#footer">A11y</a>
-                        <a href="#footer">GH</a>
+                    <footer>
+                        <a href="#">HTML</a>
+                        <a href="#">CSS</a>
+                        <a href="#">CC</a>
+                        <a href="#">A11y</a>
+                        <a href="#">GH</a>
                     </footer>
 
                 <!-- layout_black -->
